# neurobooth-os

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Neurobooth_data_visualizer.ipynb  README.md  README.rst  __init__.py  call_server_acq.bat  call_server_ctr.bat  call_server_stm.bat  config.py  contributing.rst  docker-compose.yml  dump_iphone_video.py  environment_staging.yml  environment_staging_acq.yml  environment_staging_ctr.yml  environment_staging_stm.yml  environment_stm.yml  github_checkout.bat  gui.py  layouts.py  login.py  main.py  main_control_rec.py  neurobooth_env.yml  neurobooth_video_timing.csv  pursuit_task.py  pyproject.toml  requirements.txt  requirements_dev.txt  secrets_info.py  serv_acq.bat  server_acq.py  server_pids.txt  server_stm.bat  server_stm.py  setup.py  (+3 more)
.github/workflows/: conda-tests.yml
configs/: staging.bat  wang.bat
data/: mousetracking_1234_1605224976429.json  mousetracking_1234_1605227295978.json  mousetracking_123_1605224832794.json  mousetracking_123_1605246117794.json  mousetracking_231_1605246413851.json
docs/: Release Process.md  api.rst  booth_venv_rebuild.md  code_audit.md  conf.py  deployment.md  enable_WMI_instuctions.txt  instructions_mbient_install.txt  instructions_time.txt  inter_machine_setup.md  inter_task_gap_analysis.md  inter_task_message_flow.md  mbient_soak_summary.md  neurobooth.txt  release process.md  replace_anaconda_plan.md  single_machine_testing.md  system_architecture.md  system_configuration.md  testing_with_mocks.md  timing_summary.md  timing_test_recording_audit.md  timing_test_strategy.md  win11_bat_audit.md  win11_readiness_summary.md  win11_vendor_compat.md
docs/arch/: adding_a_device.md  config_normalization.md  crash_analysis_mbient_2026-04.md  credential_management.md  db_coordinated_file_registration.md  device_lifecycle.md  messaging_architecture-assessment.md  messaging_architecture.md  neurobooth_terra_dataflow_change.md  system_architecture.md  system_configuration.md  video_filename_tracking.md  video_filename_tracking_current.md  wang_system_diagram.md
docs/obsolete/: Makefile  instructions_time.txt
docs/perf/: Mbient Connection Times [2026-04-03].md  inter-task times [2026-04-03].md  root_cause_investigation.md  system_resource_analysis.md
examples/: Neurobooth_data_visualizer.ipynb  conda.bat  create_mock_streams.py  eye_tracking.py  eyelinker_example.py  full_session_run.py  hdf5_corrections.yml  neurobooth_os_config.json  read-database_stream_record_eyetracking_task_split_write-database.py  record_using_lisel.py  run_task_database.py  run_xdf_split_postproces.py  schema_only_DBdump_v0-0-40-0.tar  set_conda_env.bat  split_task_device_map.yml  stream_record_eyetracking_task_split.py  stream_record_split.py  stream_record_task_split.py
examples/configs/: add_subject_options.yml  deploy.bat  environment.yml  neurobooth_os_config.json  setup_env.bat  staging.bat  wang.bat
extras/: add_subject.bat  add_subject.py  add_test_user.sql  camera.bat  check_usb_topology.py  clapping_test_plotting.py  cleanupBagFiles.py  cleanup_bag_files.py  connect.py  connect2.py  convert_bag2vid_timestamps.py  create_flir_videos.py  dump_iphone_video.py  intel_body_landmarks.py  intertask_report.py  iphone_stress_test.bat  log_pull.py  mbient_hdf5_inspect.py  mbient_timing.py  mbient_timing_before_after.py  mbients_connect_rec_directly.py  mbients_connect_rec_directly_acc.py  mbients_print_info_xdf.py  nb_table_exporter.py  network_conn_check.py  network_message_test_client.py  network_message_test_server.py  plot_eyelink_lsl_edf.py  plot_iphone_audio_video_rgb.py  plot_system_performance.py  plot_timing_test_sync.py  postprocess_split_xdf.bat  print_LSL_mbient_samples.py  relabel_subject_id.py  reset_mbients.bat  reset_mbients.py  run_xdf_split_postproces.py  see_cam.py  serv_acq_upload - neurobooth_OS.bat  split_xdf.py  (+7 more)
extras/.metawear/: D7B07EC2A123.json  DAB096E47FA3.json  E5F6FB6D118A.json  E895D6F739D2.json  FE073E37F59C.json
extras/intertask_output/: march_2026_gaps.csv
extras/logs/: log_pull.py
extras/perf/: _baseline_common.py  _check_msg_history.py  _correlate_freezes.py  _ctr_during_lsl_timeout.py  _dayofweek_compare.py  _db.py  _flir_queue_history.py  (+36 more)
eyelink_setup/: README.rst  start_tk_new
io/: camera.py  camera_recorder.py  camera_trigger_events.py  empatica.py  eye_tracker.py  iphone.py  lsl_steramer.py  lsl_streamer.py  marker.py  microphone.py  mouse.py  mouse_tracker.py  xdf_reader.py
iout/: camera.py  camera_brio.py  camera_intel.py  camera_recorder.py  eyelink_tracker.py  flir_cam.py  get_dev_infos.py  get_dev_metainfo.py  lsl_streamer.py  marker.py  mbient.py  metadator.py  microphone.py  mouse_tracker.py  pyspin_Example.py  screen_capture.py  see_cam.py  temp_cam1.py  temp_cam2.py  users.db  xdf_reader.py  ximea_cam.py
netcomm/: client.py  server.py  server_acq.py  server_ctr.py  server_stm.py  server_ut.py
neurobooth_os/: .gitignore  .iohpid  QueuingPrototype.py  __init__.py  acq_api_server.py  call_server_ctr.bat  config.py  create_flir_avi.py  ctr_api_server.py  ctr_gui.py  current_config.py  current_release.py  github_checkout.bat  gui.py  headless_listener.py  install.bat  layouts.py  log_manager.py  logging.py  main_control_rec.py  perf_monitor.py  pursuit.asc  registration.py  rest_api_acq.py  rest_api_gui.py  rest_api_stm.py  secrets_info.py  serv_acq.bat  server_acq.bat  server_acq.py  server_ctr.bat  server_ctr.py  server_pids.txt  server_stm.bat  server_stm.py  session_controller.py  stm_api_server.py  stm_session.py  sync_inspect.py  transfer_data.bat  (+1 more)
neurobooth_os.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
realtime/: lsl_plotter.py  lsl_visualizer.py  lsl_viz_mat.py  pyqt_plt_Example.py
sql/: log_split.sql
tasks/: .iohpid  DSC.py  DSC_psych_plot_Test.py  mouse.py  run_tasks_test.py  utils.py  wellcome_finish_screens.py
test/: server.py
www/: DSC_simplified_oneProbe_2020.html  index.html  index_task_lists.html  mouse_tracking.html  register.html  stim.html  synch_task.html
(+519 files in other folders)
